--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "include/cmd-parser"]
 	path = include/cmd-parser
-	url = git@github.com:lukedeo/cmd-parser.git
+	url = https://github.com/lukedeo/cmd-parser.git
