--- a/top_tag_config.yaml
+++ b/top_tag_config.yaml
@@ -5,14 +5,14 @@ branches:
 # averageIntPerXing_flat: float
 # mc_channel_number_flat: int
     mcevt_weight_flat: float
-# fjet_pt_flat: double
-# fjet_eta_flat: double
+    fjet_pt_flat: double
+    fjet_eta_flat: double
 # fjet_phi_flat: double
-# fjet_m_flat: double
+    fjet_m_flat: double
     fjet_Tau1_flat: double
     fjet_Tau2_flat: double
     fjet_Tau3_flat: double
-# fjet_WIDTH_flat: double
+    fjet_WIDTH_flat: double
     fjet_SPLIT12_flat: double
     fjet_SPLIT23_flat: double
     fjet_SPLIT34_flat: double
@@ -22,22 +22,22 @@ branches:
     fjet_Dip12_flat: double
     fjet_Dip13_flat: double
     fjet_Dip23_flat: double
-    fjet_DipExcl12_flat: double
+    # fjet_DipExcl12_flat: double
     fjet_PlanarFlow_flat: double
-    fjet_Angularity_flat: double
+    # fjet_Angularity_flat: double
     fjet_ActiveArea_flat: double
-    fjet_ActiveArea_px_flat: double
-    fjet_ActiveArea_py_flat: double
-    fjet_ActiveArea_pz_flat: double
-    fjet_ActiveArea_e_flat: double
+    # fjet_ActiveArea_px_flat: double
+    # fjet_ActiveArea_py_flat: double
+    # fjet_ActiveArea_pz_flat: double
+    # fjet_ActiveArea_e_flat: double
     fjet_VoronoiArea_flat: double
     fjet_QW_flat: double
     fjet_PullMag_flat: double
-    fjet_PullPhi_flat: double
-    fjet_Pull_C00_flat: double
-    fjet_Pull_C01_flat: double
-    fjet_Pull_C10_flat: double
-    fjet_Pull_C11_flat: double
+    # fjet_PullPhi_flat: double
+    # fjet_Pull_C00_flat: double
+    # fjet_Pull_C01_flat: double
+    # fjet_Pull_C10_flat: double
+    # fjet_Pull_C11_flat: double
 # fjettruth_pt_flat: double
 # fjettruth_eta_flat: double
 # fjettruth_phi_flat: double
