--- a/top_tag_config.yaml
+++ b/top_tag_config.yaml
@@ -22,18 +22,18 @@ branches:
     fjet_Dip12_flat: double
     fjet_Dip13_flat: double
     fjet_Dip23_flat: double
-    # fjet_DipExcl12_flat: double
+    fjet_DipExcl12_flat: double
     fjet_PlanarFlow_flat: double
-    # fjet_Angularity_flat: double
-    fjet_ActiveArea_flat: double
+    fjet_Angularity_flat: double
+    # fjet_ActiveArea_flat: double
     # fjet_ActiveArea_px_flat: double
     # fjet_ActiveArea_py_flat: double
     # fjet_ActiveArea_pz_flat: double
     # fjet_ActiveArea_e_flat: double
-    fjet_VoronoiArea_flat: double
+    # fjet_VoronoiArea_flat: double
     fjet_QW_flat: double
     fjet_PullMag_flat: double
-    # fjet_PullPhi_flat: double
+    fjet_PullPhi_flat: double
     # fjet_Pull_C00_flat: double
     # fjet_Pull_C01_flat: double
     # fjet_Pull_C10_flat: double
